# Futurisys

./: .env.example  .env.prod.example  .gitignore  Database.md  Dockerfile  ENVIRONMENT.md  README.md  demo.py  docker-compose.yml  openapi.json  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  openapi.yaml
migrations/: create_db.py
model/: energy_rf.joblib  model_card.json
scripts/: setup_env.sh  test.sh  update_openapi.py  validate_env.py
src/: __init__.py  app.py  db_utils.py  deps.py  hf.py  models.py  runtime.py  schemas.py  service.py  settings.py  train_stub.py
tests/: conftest.py  test_classify_ok.py  test_classify_validation.py  test_health.py  test_integration.py  test_persistence.py  test_predict_ok.py  test_predict_validation.py
