[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-shot-api"
version = "0.1.0"
description = "Zero-shot text classification FastAPI service (BART MNLI)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "UNLICENSED"}
authors = [{name = "Unknown"}]
dependencies = [
    "fastapi==0.110.2",
    "uvicorn[standard]==0.29.0",
    "transformers==4.41.2",
    "torch==2.2.2",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "SQLAlchemy==2.0.29",
    "psycopg[binary,pool]==3.1.18",
    "structlog==24.1.0",
    "python-json-logger==2.0.7",
    "httpx==0.27.0",
    "orjson==3.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.6",
    "mypy==1.10.0",
    "ruff==0.4.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "N", "ANN", "ASYNC", "S", "C4", "SIM", "PLC", "PLE", "PLR", "PLW"]
ignore = ["S101", "ANN101", "ANN102"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true
